# outside-collaborators-delta-run

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  ci.yml  release-please.yaml  release.yaml
src/: macros.rs  main.rs
src/commands/: completion.rs  mod.rs  search.rs
src/file_types/: group.rs  mod.rs  repos.rs
src/searcher/: core.rs  mod.rs  runner.rs
