[package]
name = "analyse-changed-groups-repos"
version = "0.1.0"
edition = "2021"
license = "BSD-3"
authors = ["Jeroen Knoops <jeroen.knoops@gamil.com>"]
description = "Analyse Changed Groups / Repositories"
default-run = "analyse-changed-groups-repos"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "analyse-changed-groups-repos"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "suggestions"] }
clap-verbosity-flag = "2.0.0"
clap_complete = "4.1.4"
colored = "2.0.0"
env_logger = "0.10.0"
grep = "0.2.11"
ldap3 = "0.11.1"
log = "0.4.17"
paste = "1.0.12"
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.19"
termcolor = "1.2.0"
tokio = { version = "1.26.0", features = ["full"] }
walkdir = "2.3.3"
